--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, intitial-scale=1.0">
+<title></title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<h1>References</h1>
+  <o1>
+    <li>Item 1</li>
+    <li>Item 1</li>
+    <li>Item 27</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    </o1>
+    </body>
+    </html>
